# autoanalyst

./: .env.template  .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  FEATURE_ROADMAP.md  FRAMEWORK_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE3_COVERAGE_REPORT.md  POST_MERGE_STATUS.md  QUICKSTART.md  README.md  SECURITY_SUMMARY.md  TASK_SUMMARY.md  TESTING_SUMMARY.md  app.py  crew_setup.py  firebase.json  firestore.rules  main.py  new_project_plan.md  package-lock.json  project_plan.txt  project_resolution_roadmap.md  project_verification_report.md  pyproject.toml  requirements.txt  tasks.py  test_volatility_fix.py
.github/: copilot-instructions.md
.idx/: dev.nix
agents/: trading_agents.py
config/: config.py  gemini_connector.py
data/: market_rotation_state.json  market_rotation_state.json.bak  state.json  state.json.bak
deactivate/: pyvenv.cfg
docs/: AGENT_DESIGN.md  ALPACA_CRYPTO_VERIFICATION.md  API_REFERENCE.md  CREWAI_REFERENCE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_RESTRUCTURING.md  FRAMEWORK_USAGE_GUIDE.md  FUTURE_ENHANCEMENTS.md  MASTER_SDK_DOCUMENTATION.md  MULTIMARKET_IMPLEMENTATION.md  PHASE1_CRITICAL_FIXES.md  PHASE3_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  WEEK1_COMPLETION_SUMMARY.md  WEEK2_24_7_IMPLEMENTATION_PLAN.md
frontend/: .env.template  package-lock.json  package.json
functions/: crew_setup.py  main.py  requirements.txt  tasks.py
scripts/: run_crew.py  validate_config.py
src/: constants.py
tests/: test_adaptive_scheduler.py  test_asset_aware_strategies.py  test_global_scheduler_workflow.py  test_multi_market_scanner.py  (+4 more)
(+66 files in other folders)
